add a few more publications

--- a/publication/antidesiccant_effect/cite.bib
+++ b/publication/antidesiccant_effect/cite.bib
@@ -1,18 +1,18 @@
 
-@Article{Li2023,
-AUTHOR = {Li, Xiaoping AND Omolehin, Olanike AND Hemmings, Ginger AND Tseng, Hsien Tzer AND Taylor, Amanda AND Taylor, Chad AND Kong, Ping AND Daughtrey Margery AND Douglas Luster Gouker, Fred AND Hong, Chuanxue},
-TITLE = {Boxwood phyllosphere fungal and bacterial communities and their differential responses to film-forming anti-desiccants},
-JOURNAL = {BMC Microbiology},
-VOLUME = {23},
+@Article{Kong2023,
+AUTHOR = {Kong, Ping AND Li, Xiaoping AND Sharifi, Melissa AND Bordas, Adria AND Hong, Chuanxue},
+TITLE = {Leaf Endophyte Community Composition and Network Structures Differ Between Tolerant and Susceptible English Boxwood},
+JOURNAL = {Phytobiomes},
+VOLUME = {7},
 YEAR = {2023},
-MONTH = {August},
-NUMBER = {219},
+MONTH = {},
+NUMBER = {2},
 PAGES = {},
-URL = {https://doi.org/10.1186/s12866-023-02956-0},
+URL = {https://doi.org/10.1094/PBIOMES-02-23-0009-FI},
 PubMedID = {},
 ISSN = {},
 ABSTRACT = {},
-DOI = {10.1186/s12866-023-02956-0}
+DOI = {10.1094/PBIOMES-02-23-0009-FI}
 }
 
 
